<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">


            <Button
                android:id="@+id/button"
                android:layout_below="@id/edit2"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SAVE" />

            <TextView
                android:id="@+id/txtView"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/grocery" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtView"
                android:id="@+id/edit1"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:hint="@string/item" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@id/edit1"
                android:id="@+id/edit2"
                android:hint="@string/quantity"
                />



        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>